--- a/web-ui/Jenkinsfile
+++ b/web-ui/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
         }
         stage('build') {
             steps {
-                echo 'build'
+                sh 'npm run build'
             }
         }
     }
