updte with jenkinsfile

--- a/web-ui/Jenkinsfile
+++ b/web-ui/Jenkinsfile
@@ -8,7 +8,9 @@ pipeline {
         }
         stage('build') {
             steps {
-                sh 'npm run build'
+                dir("web-ui"){
+                    sh 'npm run build'
+                }
             }
         }
     }
