updte with jenkinsfile

--- a/web-ui/Jenkinsfile
+++ b/web-ui/Jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
         stage('build') {
             steps {
                 dir("web-ui"){
+                    sh 'npm i'
                     sh 'npm run build'
                 }
             }
