updte with jenkinsfile

--- a/web-ui/Jenkinsfile
+++ b/web-ui/Jenkinsfile
@@ -14,5 +14,13 @@ pipeline {
                 }
             }
         }
+        stage('docker:build') {
+            steps {
+                dir("web-ui"){
+                    sh 'docker build -t nagabhushanamn/web-ui .'
+                }
+            }
+        }
+        
     }
 }
