updte with jenkinsfile

--- a/web-ui/Jenkinsfile
+++ b/web-ui/Jenkinsfile
@@ -1,5 +1,10 @@
 pipeline {
     agent any
+     environment { 
+        registry = "nagabhushanamn/web-ui" 
+        registryCredential = 'dockerhub' 
+        dockerImage = '' 
+    }
     stages {
         stage('checkout from scm') {
             steps {
@@ -17,10 +22,25 @@ pipeline {
         stage('docker:build') {
             steps {
                 dir("web-ui"){
-                    sh 'docker build -t nagabhushanamn/web-ui .'
+                    script { 
+                        dockerImage = docker.build registry + ":$BUILD_NUMBER" 
+                    }
                 }
             }
         }
-        
+        stage('docker:push') {
+            steps {
+                script { 
+                    docker.withRegistry( '', registryCredential ) { 
+                        dockerImage.push() 
+                    }
+                } 
+            }
+        }
+        stage('Cleaning up') { 
+            steps { 
+                sh "docker rmi $registry:$BUILD_NUMBER" 
+            }
+        } 
     }
 }
